Added smart color tint to level page
